done for add-recipe

--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -2,5 +2,5 @@ nav
     a(href='/') Home
     br
     br
-    a(herf='/recipes/add-recipe') Add Recipe
+    a(href='/recipe/add-recipe') Add Recipe
     br
