--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,3 +12,6 @@ html
 
   br
   br
+  
+script(src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js")
+script(type='text/javascript',src='/javascripts/main.js')
